# swarm-weave

./: .gitignore  Cargo.toml  README.md
doc/: Challenge.md  Index.md  Learn.md  Subnetwork.md  TODO.md
entity/: Cargo.toml  README.md
entity/src/: address.rs  app.rs  app_group.rs  app_output.rs  app_tag.rs  byte_region.rs  category.rs  comment.rs  company.rs  company_staff.rs  contact_form.rs  contact_forms.rs  debug_property_image_upload.rs  duplicated_file.rs  employee_role.rs  file.rs  folder.rs  folder_file_junction.rs  general_property_information.rs  group_app_junction.rs  groups.rs  invoice.rs  invoice_product_junction.rs  job.rs  job_skill_junction.rs  listening_to.rs  log_notes.rs  meeti.rs  meeti_participants.rs  mod.rs  music.rs  note.rs  personal_log.rs  prelude.rs  price.rs  process.rs  product.rs  property.rs  property_comment.rs  property_rating.rs  (+22 more)
migration/: README.md
migration/src/: m20220101_000001_create_table.rs
scripts/: generateEntities.sh
src/: client.rs  main.rs  rest_server.rs  server.rs
src/cli/: mod.rs
src/client/: mod.rs
src/client/gui/: mod.rs
src/config/: env.rs
src/database/: mod.rs
src/model/: mod.rs  server_node.rs
src/multicast/socket_2/: client.rs  server.rs
src/p2p/: mod.rs
src/p2p/hive/: behavior.rs  client.rs  mod.rs  server.rs
src/p2p/node/: behavior.rs  mod.rs
src/p2p/swarm/: mod.rs
src/security/: verify_token.rs
src/server/: app_info.rs  mod.rs
src/server/api/: mod.rs
src/server/api/routes/api/: mod.rs
src/server/api/routes/api/server_node/: mod.rs
src/server/middleware/: auth.rs
src/server/multicast/: mdns_example.rs  mod.rs
src/server/multicast/socket_2/: client.rs
src/server/multicast/udp_socket/: client.rs  server.rs
src/server/reverse/: mod.rs
src/server/routes/: mod.rs
src/server/routes/api/: mod.rs
src/server/routes/api/server_node/: mod.rs
src/server/swarm_mdns/: mod.rs
src/server_node/: controller.rs  mod.rs  resources.rs  server_info.rs  storage.rs  system_info.rs
src/server_node/resources/: controller.rs  mod.rs  system_core.rs  system_memory.rs
src/server_node/resources/storage/: controller.rs  mod.rs
src/server_node/resources/system_core/: controller.rs  mod.rs
src/server_node/resources/system_memory/: controller.rs  mod.rs
src/server_node/server_info/: controller.rs  mod.rs
src/server_node/system_info/: controller.rs  mod.rs
src/test/folder/: hive_test_folder.rs  mod.rs
src/test/folder/hive_folder_test_suite/: hive_server_node.rs  mod.rs
