[package]
name = "swarm-weave"
version = "0.1.0"
edition = "2021"
description = "'Perseverancia' backend implementation in Rust; This is a general backend for my many apps."
authors = ["Felix Riddle <email@email.com>"]
keywords = ["backend", "general", "api", "rust"]
categories = ["web-programming", "database"]

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-session = "0.10.0"
actix-web = "4.8.0"
async-trait = "0.1.81"
chrono = "0.4.38"
dns-parser = "0.8.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.30"
get_if_addrs = "0.5.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
libp2p-identity = "0.2.9"
mockito = "1.5.0"
names = "0.14.0"
nanoid = "0.4.0"
rand = "0.8.5"
reqwest = "0.12.7"
serde = "1.0.204"
serde_json = "1.0.122"
socket2 = "0.5.7"
tokio-macros = "2.4.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid-macro-internal = "1.10.0"
vfs = "0.12.0"

[dependencies.clap]
version = "4.5.3"
features = ["derive", "color"]

[dependencies.entity]
path = "entity"

[dependencies.libp2p]
version = "0.54.0"
features = [
    "autonat",
    "dns",
    "gossipsub",
    "identify",
    "macros",
    "mdns",
    "metrics",
    "noise",
    "ping",
    "quic",
    "relay",
    "tcp",
    "tokio",
    "yamux",
]

[dependencies.migration]
path = "migration"

[dependencies.sea-orm]
version = "1.0.0"
features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "with-chrono",
    "with-json",
    "macros",
]

[dependencies.sysinfo]
version = "0.31.2"
features = ["serde"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
